update graalvm reachability